Fix register order for binary ops